[package]
name = "econym"
version = "0.1.0"
edition = "2024"

[dependencies]
kiddo = { version = "5.3.1", features = ["rkyv"] }
anyhow = "1"
geoparquet = "0.8.0"
parquet = "58.0.0"
arrow-array = "58.2.0"
arrow-schema = "58.2.0"
geoarrow = "0.4"
rkyv = { version = "0.7.46", features = ["std", "alloc"], default-features = false }
clap = { version = "4.6.1", features = ["derive"] }
axum = "0.8.9"
tokio = { version = "1.52.3", features = ["full"] }
serde_json = "1.0.149"
serde = { version = "1.0.228", features = ["derive"] }
memmap2 = "0.9.10"
ctrlc = { version = "3.5.2", features = ["termination"] }
tower-http = { version = "0.6.10", features = ["cors"] }
